[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/MenuBlock.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/MenuHole.tscn" type="PackedScene" id=2]
[ext_resource path="res://resources/ui_theme.tres" type="Theme" id=3]
[ext_resource path="res://scenes/MenuButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/MenuScroller.tscn" type="PackedScene" id=5]
[ext_resource path="res://resources/little_theme.tres" type="Theme" id=7]
[ext_resource path="res://scripts/ProfilePanel.gd" type="Script" id=8]

[node name="ProfilePanel" type="Node2D"]
position = Vector2( 144, 90 )
scale = Vector2( 3, 3 )
script = ExtResource( 8 )

[node name="Choose" type="Node2D" parent="."]

[node name="MenuBlock" parent="Choose" instance=ExtResource( 1 )]
size = Vector2( 5, 4 )

[node name="MenuHole" parent="Choose" instance=ExtResource( 2 )]
position = Vector2( 15, 30 )
size = Vector2( 4.333, 2.66 )

[node name="CreateButton" parent="Choose" instance=ExtResource( 4 )]
position = Vector2( 15, 152.667 )
size = Vector2( 1.333, 0.5 )
label = "New profile"

[node name="DeleteButton" parent="Choose" instance=ExtResource( 4 )]
position = Vector2( 82.6667, 152.333 )
size = Vector2( 1.333, 0.5 )
label = "Delete"

[node name="SelectButton" parent="Choose" instance=ExtResource( 4 )]
position = Vector2( 150, 152 )
size = Vector2( 1.333, 0.5 )
label = "Confirm"

[node name="Title" type="Label" parent="Choose"]
margin_left = 15.0
margin_top = 2.0
margin_right = 225.0
margin_bottom = 30.0
theme = ExtResource( 3 )
text = "Choose Profile"
valign = 1

[node name="Table" type="Node2D" parent="Choose"]
position = Vector2( 18, 33 )

[node name="Header" type="Node2D" parent="Choose/Table"]

[node name="NameHeader" parent="Choose/Table/Header" instance=ExtResource( 1 )]
position = Vector2( -0.999996, -1 )
size = Vector2( 2.667, 0.333 )

[node name="Label" type="Label" parent="Choose/Table/Header/NameHeader"]
margin_left = 4.0
margin_right = 120.0
margin_bottom = 15.0
theme = ExtResource( 7 )
text = "Name"

[node name="ProgressHeader" parent="Choose/Table/Header" instance=ExtResource( 1 )]
position = Vector2( 119, -0.999992 )
size = Vector2( 1.244, 0.333 )

[node name="Label" type="Label" parent="Choose/Table/Header/ProgressHeader"]
margin_left = 4.0
margin_right = 52.0
margin_bottom = 15.0
theme = ExtResource( 7 )
text = "Progress"
align = 1

[node name="ArrowHeader" parent="Choose/Table/Header" instance=ExtResource( 1 )]
position = Vector2( 175, -1 )
size = Vector2( 0.333, 0.333 )

[node name="MenuScroller" parent="Choose/Table" instance=ExtResource( 5 )]
position = Vector2( 178, 23.6667 )
length = 81
elements = 7

[node name="Rows" type="Node2D" parent="Choose/Table"]
position = Vector2( -0.999998, 14 )

[node name="TextureButton" type="TextureButton" parent="Choose/Table"]
margin_left = -1.0
margin_top = 14.0
margin_right = 190.0
margin_bottom = 115.0
mouse_filter = 2

[node name="NoProfile" type="Label" parent="Choose"]
margin_left = 17.0
margin_top = 32.0
margin_right = 208.0
margin_bottom = 148.0
theme = ExtResource( 7 )
text = "No existing profile found.
Create a new one."
align = 1
valign = 1

[node name="WindowButtons" type="Node2D" parent="Choose"]
position = Vector2( 189.333, 4 )

[node name="HelpButton" parent="Choose/WindowButtons" instance=ExtResource( 4 )]
size = Vector2( 0.333, 0.333 )
label = "?"

[node name="CloseButton" parent="Choose/WindowButtons" instance=ExtResource( 4 )]
position = Vector2( 17, 0 )
size = Vector2( 0.333, 0.333 )
label = "X"

[node name="Create" type="Node2D" parent="."]
visible = false
position = Vector2( 22.3333, 45 )

[node name="MenuBlock" parent="Create" instance=ExtResource( 1 )]
size = Vector2( 4, 2 )

[node name="MenuHole" parent="Create" instance=ExtResource( 2 )]
position = Vector2( 7.66666, 30 )
size = Vector2( 3.667, 0.5 )

[node name="Label" type="Label" parent="Create"]
margin_left = 8.0
margin_right = 173.0
margin_bottom = 30.0
theme = ExtResource( 3 )
text = "Choose a name"
align = 1
valign = 1

[node name="CancelButton" parent="Create" instance=ExtResource( 4 )]
position = Vector2( 22.6667, 60 )
size = Vector2( 1.333, 0.5 )
label = "Cancel"

[node name="ConfirmCreateButton" parent="Create" instance=ExtResource( 4 )]
position = Vector2( 97.6667, 60 )
size = Vector2( 1.333, 0.5 )
label = "Confirm"

[node name="LineEdit" type="LineEdit" parent="Create"]
margin_left = 13.0
margin_top = 32.0
margin_right = 145.0
margin_bottom = 50.0
theme = ExtResource( 7 )
max_length = 15
context_menu_enabled = false
placeholder_text = "Your name"
caret_blink = true

[node name="Delete" type="Node2D" parent="."]
visible = false
position = Vector2( 22.3333, 45 )

[node name="MenuBlock" parent="Delete" instance=ExtResource( 1 )]
size = Vector2( 4, 2 )

[node name="Label" type="Label" parent="Delete/MenuBlock"]
margin_left = 8.0
margin_top = 15.0
margin_right = 173.0
margin_bottom = 45.0
theme = ExtResource( 7 )
text = "Are you sure you want to delete this profile:"
align = 1
valign = 1
autowrap = true

[node name="CancelDeleteButton" parent="Delete/MenuBlock" instance=ExtResource( 4 )]
position = Vector2( 22.6667, 60 )
size = Vector2( 1.333, 0.5 )
label = "Cancel"

[node name="ConfirmDeleteButton" parent="Delete/MenuBlock" instance=ExtResource( 4 )]
position = Vector2( 97.6667, 60 )
size = Vector2( 1.333, 0.5 )
label = "Confirm"

[node name="Help" type="Node2D" parent="."]
visible = false
position = Vector2( 22.333, 45 )

[node name="MenuBlock" parent="Help" instance=ExtResource( 1 )]
size = Vector2( 4, 2 )

[node name="Label" type="Label" parent="Help/MenuBlock"]
margin_left = 8.0
margin_right = 173.0
margin_bottom = 30.0
theme = ExtResource( 7 )
text = "Your save folder is located at:"
align = 1
valign = 1
autowrap = true

[node name="Path" type="Label" parent="Help/MenuBlock"]
margin_left = 8.0
margin_top = 15.0
margin_right = 173.0
margin_bottom = 60.0
theme = ExtResource( 7 )
text = "SAVE_PATH"
align = 1
valign = 1
autowrap = true

[node name="CopyButton" parent="Help/MenuBlock" instance=ExtResource( 4 )]
position = Vector2( 22.667, 60 )
size = Vector2( 1.333, 0.5 )
label = "Copy"

[node name="ConfirmHelpButton" parent="Help/MenuBlock" instance=ExtResource( 4 )]
position = Vector2( 97.667, 60 )
size = Vector2( 1.333, 0.5 )
label = "Confirm"

[connection signal="pressed" from="Choose/CreateButton" to="." method="_on_CreateButton_pressed"]
[connection signal="pressed" from="Choose/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="pressed" from="Choose/SelectButton" to="." method="_on_SelectButton_pressed"]
[connection signal="mouse_entered" from="Choose/Table/TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="Choose/Table/TextureButton" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="Choose/WindowButtons/HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="Choose/WindowButtons/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="Create/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="Create/ConfirmCreateButton" to="." method="_on_ConfirmCreateButton_pressed"]
[connection signal="text_changed" from="Create/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="visibility_changed" from="Create/LineEdit" to="." method="_on_LineEdit_visibility_changed"]
[connection signal="pressed" from="Delete/MenuBlock/CancelDeleteButton" to="." method="_on_CancelDeleteButton_pressed"]
[connection signal="pressed" from="Delete/MenuBlock/ConfirmDeleteButton" to="." method="_on_ConfirmDeleteButton_pressed"]
[connection signal="pressed" from="Help/MenuBlock/CopyButton" to="." method="_on_CopyButton_pressed"]
[connection signal="pressed" from="Help/MenuBlock/ConfirmHelpButton" to="." method="_on_ConfirmHelpButton_pressed"]
